crates/reductool-proc-macro/tests/ui/pattern_tuple.rs
use reductool_proc_macro::aitool;

#[aitool]
fn f((a, b): (i32, i32)) {}

fn main() {}
